Wofi config and style changes

--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,26 +1,24 @@
 window {
 margin: 0px;
-border: 1px solid #bd93f9;
-background-color: #282a36;
+background-color: rgba(40, 42, 54, 0.5);
 }
 
 #input {
-margin: 5px;
+margin: 25px;
 border: none;
 color: #f8f8f2;
 background-color: #44475a;
 }
 
 #inner-box {
-margin: 5px;
+margin: 15px;
 border: none;
-background-color: #282a36;
 }
 
 #outer-box {
-margin: 5px;
+margin: 15px;
 border: none;
-background-color: #282a36;
+background-color: rgba(40, 42, 54, 0.8);
 }
 
 #scroll {
